update banner to be more generic and update another scripts

--- a/Python/Banner/config.json
+++ b/Python/Banner/config.json
@@ -4,8 +4,8 @@
 			"url":"https://pastebin.com/raw/esscp36r",
 			"os":"Linux"
 		},
-		"Work computer":{
-			"url":"TBD",
+		"CQHD-LT100476":{
+			"url":"https://pastebin.com/raw/7JArMLME",
 			"os":"Windows"
 		}
 	}
