--- a/Python/Banner/.vscode/settings.json
+++ b/Python/Banner/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#21321A",
-        "titleBar.activeBackground": "#2E4625",
-        "titleBar.activeForeground": "#F8FBF7"
-    },
-    "python.pythonPath": "C:\\Users\\85037057\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": ".venv\\Scripts\\python.exe"
 }
