--- a/Python/Banner/.vscode/launch.json
+++ b/Python/Banner/.vscode/launch.json
@@ -10,6 +10,17 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal"
+        },
+
+        {
+            "name": "Python: Current File with update",
+            "type": "python",
+            "request": "launch",
+            "program": "${file}",
+            "args":[
+                "update"
+            ],
+            "console": "integratedTerminal"
         }
     ]
 }
